Fixed weird navbar spacing

--- a/Portfolio 2.0/css/styles-main.css
+++ b/Portfolio 2.0/css/styles-main.css
@@ -2,6 +2,11 @@ html{
     scroll-behavior: smooth;
 }
 
+body{
+    margin: 0;
+    padding: 0;
+}
+
 main{
     width: 72vw;
     margin: 0 auto;
@@ -30,7 +35,7 @@ p{
 
 nav{
     position: absolute;
-    width: 99.2%;
+    width: 100%;
     z-index: 10;
 }
 
